fix: 调整 gapcursor 高度

--- a/apps/demo/src/components/Editor/EditorContent.less
+++ b/apps/demo/src/components/Editor/EditorContent.less
@@ -595,13 +595,16 @@
     display: none;
     pointer-events: none;
     position: absolute;
+    height: 24px;
 
     &::after {
+      top: 2px;
       content: '';
       display: block;
       position: relative;
       width: 0px;
-      height: 22px;
+      height: 20px;
+      border-top: 0;
       border-left: 1px solid @text-color;
       animation: ProseMirror-cursor-blink 1.1s steps(2, start) infinite;
     }
